--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,11 @@
 .app {
   padding: 20px 80px;
+  width: 100%;
+  //overflow: hidden;
+
+  @media (max-width: 768px) {
+    padding: 20px;
+  }
 
   .search {
     position: relative;
@@ -22,6 +28,7 @@
       &:focus {
         outline: 1px solid #2b3642;
       }
+
       &::placeholder {
         color: #B2B7BF;
         font-size: 14px;
@@ -30,6 +37,7 @@
         line-height: 137.687%;
       }
     }
+
     .icon {
       background: transparent;
       cursor: pointer;
@@ -38,6 +46,8 @@
       top: 50%;
       transform: translateY(-50%);
       right: 10px;
+      font-size: 20px;
+      color: #fff;
     }
   }
 
@@ -45,13 +55,15 @@
     margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 4fr 5fr;
-
+    width: 100%;
+    overflow-x: auto;
 
     & > div {
       padding: 13px;
       display: flex;
       align-items: center;
     }
+
     .head {
       color: #fff;
       background: #474955;
@@ -68,11 +80,11 @@
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
-          //transform: rotate(180deg);
           right: 0;
         }
       }
     }
+
     .body {
       color: #474955;
       font-size: 13px;
@@ -80,6 +92,9 @@
       border-right: 1px solid #E3E6EC;
       border-bottom: 1px solid #E3E6EC;
 
+      &:not(.id) {
+        min-width: 200px;
+      }
       &.id {
         justify-content: center;
         border-left: 1px solid #E3E6EC;
@@ -93,7 +108,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
-    
+
     button {
       background: transparent;
       border: none;
@@ -102,6 +117,22 @@
       color: #474955;
       font-size: 20px;
       transition: .3s;
+
+      p {
+        display: block;
+
+        @media (max-width: 768px) {
+          display: none;
+        }
+      }
+
+      svg {
+        display: none;
+
+        @media (max-width: 768px) {
+          display: block;
+        }
+      }
 
       &:hover {
         color: #7EBC3C;
@@ -114,6 +145,10 @@
       justify-content: center;
       align-items: center;
 
+      @media (max-width: 500px) {
+        gap: 5px;
+      }
+
       button {
         font-size: 18px;
         padding: 5px;
@@ -121,6 +156,11 @@
         transition: .3s;
         font-style: italic;
         font-weight: 700;
+
+
+        @media (max-width: 500px) {
+          font-size: 16px;
+        }
 
         &.active {
           color: #7EBC3C;
