--- a/src/app.scss
+++ b/src/app.scss
@@ -168,4 +168,14 @@
       }
     }
   }
+
+  .status {
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    font-weight: 700;
+    color: #474955;
+  }
 }
